--- a/backend/.env.example
+++ b/backend/.env.example
@@ -53,5 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #Upgradation
 
-SENTRY_LARAVEL_DSN=https://f43ed99c739442c9b1bbde87123c2cba@o1088474.ingest.sentry.io/6449675
+SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
